kubernetes/argocd/components/argocd/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: argocd
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    # MicroShift
    - type: Allow
      to:
        cidrSelector: 10.101.1.7/32
    - type: Allow
      to:
        dnsName: microshift.arthurvardevanyan.com
    # https://api.github.com/meta
    - type: Allow
      to:
        dnsName: github.com
    - type: Allow
      to:
        dnsName: api.github.com
    - type: Allow
      to:
        cidrSelector: 140.82.112.0/20
    - type: Allow
      to:
        dnsName: zitadel.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: okd.homelab.arthurvardevanyan.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
